compiler/testData/diagnostics/tests/regressions/kt847.kt
fun <T> T.mustBe(t : T) {
    <!UNUSED_EXPRESSION!>"$this must be$<!SYNTAX!>as<!>$t"<!>
}
